--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/styles/main.css">
     <title>Sea Battle</title>
 </head>
 <body>
-    
+    <div class="grid-container">
+        <div class="grid-item small" id="small-1"></div>
+        <div class="grid-item small" id="small-2"></div>
+        <div class="grid-item small" id="small-3"></div>
+        <div class="grid-item small" id="small-4"></div>
+        <div class="grid-item medium" id="medium-1"></div>
+        <div class="grid-item medium" id="medium-2"></div>
+        <div class="grid-item medium" id="medium-3"></div>
+        <div class="grid-item large" id="large-1"></div>
+        <div class="grid-item large" id="large-2"></div>
+        <div class="grid-item" id="flagman"></div>
+        <!-- <div class="grid-item flagman"></div> -->
+    </div>
 </body>
 </html>
